--- a/themes/nailok/less/layout/_course.less
+++ b/themes/nailok/less/layout/_course.less
@@ -64,12 +64,13 @@
   }
   .title-big {
     font-size: 30px;
+    line-height: normal;
     margin-bottom: 15px;
   }
   p {
     font-size: 14px;
     font-weight: 500;
-    margin-bottom: 62px;
+   // margin-bottom: 62px;
   }
   .btn-pink {
     padding: 6px 22px;
@@ -85,12 +86,16 @@
   .border-pink();
   position: relative;
   padding: 34.1px 0 33px;
+  text-decoration: none !important;
   .title {
+    color: #58595b;
+    text-decoration: none !important;
     font-size: 32px;
     font-weight: 700;
     line-height: 40px;
     position: relative;
     left: -10%;
+    margin: 0 !important;
     span {
       color: @purple;
       font-size: 48px;
@@ -99,6 +104,7 @@
     }
   }
   img {
+    margin: 0 !important;
     position: absolute;
     right: 0;
     bottom: 0;
@@ -109,6 +115,7 @@
   margin: 40px 0;
   width: 100%;
   position: relative;
+  background: url('https://cdn-images-1.medium.com/max/1600/1*9EBHIOzhE1XfMYoKz1JcsQ.gif') no-repeat center;
   .info {
     position: absolute;
     left: -5px;
@@ -198,7 +205,7 @@
 
   .course-item {
     .title-big {
-      color: black;
+     // color: black;
     }
   }
 
