--- a/themes/nailok/less/pages/_catalog.less
+++ b/themes/nailok/less/pages/_catalog.less
@@ -4,9 +4,11 @@
     background-position-y: 2100px;
   }
   .collection {
+    padding-top: 25px;
     padding-bottom: 70px;
   }
   .latest {
+    margin-top: 15px;
     .hot {
       .btn-pink {
         margin-top: 25px;
