--- a/themes/nailok/less/helpers/_base.less
+++ b/themes/nailok/less/helpers/_base.less
@@ -145,11 +145,68 @@ body {
   }
 }
 
-.paragraph {
+.visual-content {
+  color: #59595b;
+  img {
+    margin: 5px 0;
+    max-width: 100%;
+  }
+  h1, h2 {
+    font-size: 54px;
+  }
+  h3 {
+    font-size: 48px;
+  }
+  h4 {
+    font-size: 36px;
+  }
+  h5 {
+    font-size: 28px;
+  }
+  h6 {
+    font-size: 20px;
+  }
+  h2, h3, h4, h5, h6 {
+    font-weight: 800!important;
+    margin: 20px 0;
+  }
+  p {
+    margin: 10px 0;
+    font-size: 14px;
+  }
+  ul, ol {
+    margin: 5px 0;
+    padding-left: 30px;
+    list-style: unset;
+    font-size: 16px;
+    font-weight: 500;
+    li {
+      margin: 4px;
+    }
+  }
+  mark {
+    background-color: @purple;
+  }
+  a:not(.btn-pink) {
+    color: @purple;
+    text-decoration: underline;
+  }
+  blockquote {
+    font-size: 14px;
+    font-style: italic;
+    font-weight: 300;
+  }
+  b{
+    font-weight: 600;
+  }
+}
+
+.paragraph, ol, ul {
   color: #58595b;
   font-size: 14px;
   font-weight: 300;
 }
+
 
 @media (max-width: 768px) {
   .title-big {
@@ -158,7 +215,7 @@ body {
   }
 
   h1.title-big {
-    font-size: 30px;
+    font-size: 48px;
     text-align: center;
   }
 
@@ -167,5 +224,9 @@ body {
       flex-wrap: wrap;
       justify-content: center;
     }
+  }
+
+  .content{
+    max-width: 100vw;
   }
 }
