--- a/themes/nailok/less/layout/_header.less
+++ b/themes/nailok/less/layout/_header.less
@@ -8,6 +8,8 @@
     }
   }
   .top {
+    margin-right: 15px;
+    margin-left: 0px;//
     svg {
       font-size: 16px;
     }
@@ -98,11 +100,12 @@
     font-weight: 500;
     color: #59595b;
     padding: 20px 16px 0 0;
+    margin: 0;
     & > li {
       border-bottom: 4px solid transparent;
       transition: border .2s;
       padding: 0 8px 4px;
-      &:hover {
+      &:hover,&.show {
         border-bottom-color: @purple;
         .dropdown-menu {
           opacity: 1;
@@ -117,7 +120,7 @@
       background-color: @purple;
       opacity: 0;
       pointer-events: none;
-      transition: all .5s;
+      transition: all .8s;
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
