--- a/themes/nailok/less/layout/_modal.less
+++ b/themes/nailok/less/layout/_modal.less
@@ -79,6 +79,11 @@
     margin: 80px auto 0;
     transition: all .2s;
   }
+  .wpcf7-recaptcha{
+    & > div{
+      margin: 15px auto 0;
+    }
+  }
 }
 
 @media (max-width: 991px) {
