--- a/themes/nailok/less/layout/_product.less
+++ b/themes/nailok/less/layout/_product.less
@@ -128,16 +128,21 @@
   .border-pink();
   color: @gray;
   position: relative;
+  display: block;
+  text-decoration: none !important;
+  color: #58595b !important;
   .text {
     position: relative;
     left: -80px;
     padding-top: 55px;
     z-index: 1;
+    margin: 0 !important;
   }
   .title {
     font-size: 32px;
     line-height: 42px;
     font-weight: 700;
+    margin-top: 0 !important;
     margin-bottom: 20px;
   }
   p {
@@ -148,6 +153,7 @@
     position: absolute;
     right: -15px;
     bottom: 0;
+    margin: 0 !important;
   }
   &.delivery {
     img {
@@ -335,6 +341,10 @@
       text-decoration: underline;
       margin-bottom: 60px;
       display: block;
+      &.disabled {
+        opacity: 0;
+        pointer-events: none;
+      }
     }
     .btn-pink {
       margin: 0 auto 10px;
@@ -430,7 +440,7 @@
   background-color: #f7f7f7;
   text-align: center;
   position: relative;
-  height: 160px;
+  // height: 160px;
   margin: 4px 0;
   &:hover {
     & > .title {
@@ -453,9 +463,10 @@
     transition: all .2s;
   }
   .photo {
-    padding: 10px 0 5px;
+    //padding: 10px 0 5px;
     img {
-      max-height: 140px;
+      max-height: 160px;
+      width: 100%;
     }
   }
   .hover {
@@ -483,6 +494,7 @@
       .size(200px, 36px);
       padding: 4px 0;
       font-size: 18px;
+      transition: all .2s;
     }
   }
   .sale {
@@ -499,6 +511,14 @@
 }
 
 @media (max-width: 1200px) {
+  .catalog-control {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    .show-count {
+      margin-top: 15px;
+    }
+  }
+
   .before-content {
     flex-direction: column;
     align-items: center;
@@ -537,6 +557,13 @@
 }
 
 @media (max-width: 991px) {
+  .catalog-control {
+    justify-content: space-between;
+    .show-count {
+      margin-top: 0;
+    }
+  }
+
   .brands-section {
     img {
       margin: 15px;
