--- a/themes/nailok/less/layout/_sidebar.less
+++ b/themes/nailok/less/layout/_sidebar.less
@@ -39,7 +39,7 @@
       font-weight: 200;
       position: relative;
       top: 15px;
-      left: -7px;
+      left: -4px;
     }
     .brand {
       font-size: 18px;
@@ -124,6 +124,7 @@
   }
   .side-advantages {
     padding-top: 100px;
+    padding-bottom: 25px;//
     .advantage-item {
       display: block;
       margin-bottom: 20px;
@@ -149,7 +150,7 @@
         display: inline-block;
       }
       .dropdown-menu {
-        position: unset;
+        position: relative;
         top: auto;
         left: auto;
         &:before {
