--- a/themes/nailok/less/main.less
+++ b/themes/nailok/less/main.less
@@ -1,5 +1,6 @@
-@import "../css/bootstrap.min.css";
-@import url("https://use.fontawesome.com/releases/v5.0.6/css/all.css");
+@import "vendors/_bootstrap.min.less";
+//@import "vendors/_font.less";
+//@import url("https://use.fontawesome.com/releases/v5.0.6/css/all.css");
 @import "helpers/_reset";
 @import "helpers/_fonts";
 @import "helpers/_lesshat";
@@ -27,15 +28,132 @@
     padding-top: 45px;
   }
 }
-.custom-page{
-  main{
+
+.custom-page {
+  main {
     padding-bottom: 45px;
   }
 }
+
 .seo-text {
   padding: 130px 0 100px;
   color: #959595;
   font-size: 14px;
+  img {
+    margin: 5px 0;
+    max-width: 100%;
+  }
+  h1, h2 {
+    font-size: 54px;
+  }
+  h3 {
+    font-size: 48px;
+  }
+  h4 {
+    font-size: 36px;
+  }
+  h5 {
+    font-size: 28px;
+  }
+  h6 {
+    font-size: 20px;
+  }
+  h1,h2, h3, h4, h5, h6 {
+    font-weight: 800!important;
+    margin: 20px 0;
+  }
+  p {
+    margin: 10px 0;
+    font-size: 14px;
+  }
+  ul, ol {
+    margin: 5px 0;
+    padding-left: 30px;
+    list-style: unset;
+    font-weight: 400;
+    li {
+      margin: 4px;
+    }
+  }
+  mark {
+    background-color: @purple;
+  }
+  a:not(.btn-pink) {
+    color: @purple;
+    text-decoration: underline;
+  }
+  blockquote {
+    font-size: 14px;
+    font-style: italic;
+    font-weight: 300;
+  }
+  b,strong{
+    font-weight: 800;
+  }
+}
+
+.seo-content {
+  padding-bottom: 100px;
+  color: #959595;
+  font-size: 14px;
+  img {
+    margin: 5px 0;
+    max-width: 100%;
+  }
+  h1, h2 {
+    font-size: 54px;
+  }
+  h3 {
+    font-size: 48px;
+  }
+  h4 {
+    font-size: 36px;
+  }
+  h5 {
+    font-size: 28px;
+  }
+  h6 {
+    font-size: 20px;
+  }
+  h1,h2, h3, h4, h5, h6 {
+    font-weight: 800!important;
+    margin: 20px 0;
+  }
+  p {
+    margin: 10px 0;
+    font-size: 14px;
+  }
+  ul, ol {
+    margin: 5px 0;
+    padding-left: 30px;
+    list-style: unset;
+    font-size: 16px;
+    font-weight: 500;
+    li {
+      margin: 4px;
+    }
+  }
+  mark {
+    background-color: @purple;
+  }
+  a:not(.btn-pink) {
+    color: @purple;
+    text-decoration: underline;
+  }
+  blockquote {
+    font-size: 14px;
+    font-style: italic;
+    font-weight: 300;
+  }
+  b{
+    font-weight: 600;
+  }
+}
+
+.formated-text{
+  .seo-text();
+  padding: 0;
+  color: #58595b;//
 }
 
 .woocommerce-message,
@@ -81,8 +199,21 @@
 @media (max-width: 768px) {
   .seo-text {
     display: none;
+    h1, h2 {
+      font-size: 36px;
+    }
+    h3 {
+      font-size: 36px;
+    }
   }
-
+.formated-text{
+  h1, h2 {
+    font-size: 36px;
+  }
+  h3 {
+    font-size: 36px;
+  }
+}
   .woocommerce-message,
   .woocommerce-error,
   .woocommerce-info {
