--- a/themes/nailok/less/pages/_cart.less
+++ b/themes/nailok/less/pages/_cart.less
@@ -256,6 +256,41 @@
       display: none;
     }
   }
+  .woocommerce-table {
+    margin-top: 15px;
+    & {
+      width: 100%;
+      max-width: 100%;
+      margin-bottom: 1rem;
+      background-color: transparent;
+    }
+
+    & th,
+    & td {
+      padding: 0.75rem;
+      vertical-align: top;
+      border-top: 1px solid #dee2e6;
+    }
+
+    & thead th {
+      vertical-align: bottom;
+      border-bottom: 2px solid #dee2e6;
+    }
+
+    & tbody + tbody {
+      border-top: 2px solid #dee2e6;
+    }
+
+    & th,
+    & td {
+      border: 1px solid #dee2e6;
+    }
+
+    & thead th,
+    & thead td {
+      border-bottom-width: 2px;
+    }
+  }
 }
 
 @media (min-width: 991px) and (max-width: 1200px) {
@@ -267,7 +302,7 @@
             width: 20%;
           }
           &:nth-child(3) {
-            width: 17%;
+            width: 19%;
           }
           &:last-child {
             width: 13%;
@@ -416,6 +451,9 @@
         }
         .btn-pink {
           width: 270px;
+        }
+        .checkbox select{
+          width: 245px;
         }
       }
     }
