--- a/themes/nailok/less/pages/_product.less
+++ b/themes/nailok/less/pages/_product.less
@@ -17,6 +17,7 @@
     }
     .border-pink {
       margin-top: 15px;
+      max-width: 397px;
     }
     .album {
       position: relative;
@@ -75,7 +76,7 @@
       font-size: 24px;
       line-height: 30px;
       font-weight: 500;
-      margin-bottom: 85px;
+      margin-bottom: 10px;
       b {
         font-weight: 700;
       }
@@ -84,7 +85,7 @@
       font-size: 24px;
       font-weight: 700;
       color: #74bd6a;
-      margin-bottom: 20px;
+     // margin-bottom: 10px;
       &.out-of-stock {
         color: #ff3126;
       }
@@ -148,7 +149,12 @@
       font-size: 24px;
       font-weight: 400;
       padding: 13px 35px;
+      margin-bottom: 15px;
       transition: all .2s;
+    }
+    /*bottom section*/
+    .advantage-item {
+      margin-top: 55px;
     }
     h3, h4 {
       padding-top: 50px;
@@ -165,7 +171,10 @@
         }
       }
       label {
-        background: url("") no-repeat center;
+        background: url("") no-repeat;
+        background-position-x: 90%;
+        background-position-y: 40%;
+        background-size: 300px 300px;
         cursor: pointer;
         border: 4px solid transparent;
         transition: border .2s;
@@ -181,7 +190,8 @@
       }
       .popover {
         top: ~'calc(100% - 8px)';
-        left: -50%;
+        pointer-events: none;
+        left: -22%;
         position: absolute;
         .fit-content();
         opacity: 0;
@@ -197,6 +207,17 @@
           border-bottom-color: white;
         }
       }
+    }
+    .choice {
+      padding-bottom: 15px;
+    }
+    ul, ol {
+      padding-left: 30px;
+      list-style: unset;
+      font-weight: 400;
+    }
+    .paragraph {
+      font-weight: 400;
     }
   }
   .collection {
@@ -221,6 +242,10 @@
 @media (max-width: 768px) {
   .product-page {
     .product {
+      .border-pink {
+        max-width: 200px;
+        margin: 15px auto 0;
+      }
       .album {
         width: 100%;
         height: auto;
