--- a/themes/nailok/less/pages/_search.less
+++ b/themes/nailok/less/pages/_search.less
@@ -1,6 +1,10 @@
 .search-page {
+
   .content {
-    padding: 50px 0;
+    padding: 50px 0;//
+    .paragraph{
+      font-size: 24px;
+    }
     .error-text {
       padding: 200px 0 35px;
       font-size: 44px;
